--- a/saleappv2/requirements.txt
+++ b/saleappv2/requirements.txt
@@ -1,13 +1,22 @@
+Babel==2.11.0
+certifi==2022.9.24
 click==8.1.3
-colorama==0.4.5
+cloudinary==1.30.0
+colorama==0.4.6
 Flask==2.2.2
+Flask-Admin==1.6.0
+Flask-BabelEx==0.9.4
+Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.2
-greenlet==1.1.3.post0
-importlib-metadata==5.0.0
+greenlet==2.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 PyMySQL==1.0.2
-SQLAlchemy==1.4.42
+pytz==2022.6
+six==1.16.0
+speaklater==1.3
+SQLAlchemy==1.4.44
+urllib3==1.26.12
 Werkzeug==2.2.2
-zipp==3.10.0
+WTForms==3.0.1
