--- a/saleappv2/requirements.txt
+++ b/saleappv2/requirements.txt
@@ -9,6 +9,7 @@ Flask-BabelEx==0.9.4
 Flask-Login==0.6.2
 Flask-SQLAlchemy==3.0.2
 greenlet==2.0.1
+importlib-metadata==5.1.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
@@ -20,3 +21,4 @@ SQLAlchemy==1.4.44
 urllib3==1.26.12
 Werkzeug==2.2.2
 WTForms==3.0.1
+zipp==3.11.0
